# captainhook

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOWTO.md  README.md  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
captainhook/: database.py  fastapi_server.py  flask_server.py  security.py  sender.py
captainhook/templates/: base.html  dashboard.html
captainhook/templates/partials/: event_list.html  health_badge.html
nginx/: nginx.conf
scripts/: setup_cron.sh
traefik/: traefik.yml
